--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"fastify": "^3.20.2",
 		"fastify-cookie": "^5.3.1",
 		"fastify-cors": "^6.0.2",
+		"fastify-csrf": "^3.1.0",
 		"fastify-helmet": "^5.3.2",
 		"fastify-rate-limit": "^5.7.0",
 		"fastify-swagger": "^4.9.1",
